force-app/main/default/objects/Case/fields/Customer_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_External_Id__c</fullName>
    <label>Customer External ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>