force-app/main/default/objects/Case/fields/Resolution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Summary__c</fullName>
    <label>Resolution Summary</label>
    <type>TextArea</type>
</CustomField>