force-app/main/default/objects/Case/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <label>Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Resolved_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>